[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://game/scenes/credits.gd" id="1_script"]

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.1, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 28
alignment = 1

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Circe's Garden"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 52
theme_override_colors/font_color = Color(0.93, 0.88, 0.78, 1)

[node name="BodyLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Ending"
custom_minimum_size = Vector2(880, 0)
horizontal_alignment = 1
autowrap_mode = 3
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.88, 0.9, 0.95, 1)

[node name="PromptLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Press A / E to return to menu"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.65, 0.68, 0.74, 1)
